--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="main.css">
+    <link rel="stylesheet" href="css/main.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <title>Greenpost.uz</title>
 </head>
@@ -20,7 +20,7 @@
             </div>
             </a>
             <div class="telephone">
-                <div >
+                <div>
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="darkgrey" class="bi bi-telephone-fill" viewBox="0 0 16 16">
                     <path fill-rule="evenodd" d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z"/>
                     </svg>
@@ -72,26 +72,26 @@
                 </ul>
             </div>
         </div>
-        <div class="container">
-            <ul>
-                <li>
-                    <a href="">Меню</a>
-                </li>
-                <li>
-                    <a href="">Бонусная программа</a>
-                </li>
-                <li>
-                    <a href="">Тарифы и услуги</a>
-                </li>
-                <li>
-                    <a href="">Советы по почтовому оформлению</a>
-                </li>
-                <li>
-                    <a href="">Шоппинг-сервис</a>
-                </li>
-            </ul>
-        </div>
     </header>
+    <div class="container">
+        <ul>
+            <li>
+                <a href="">Меню</a>
+            </li>
+            <li>
+                <a href="">Бонусная программа</a>
+            </li>
+            <li>
+                <a href="">Тарифы и услуги</a>
+            </li>
+            <li>
+                <a href="">Советы по почтовому оформлению</a>
+            </li>
+            <li>
+                <a href="">Шоппинг-сервис</a>
+            </li>
+        </ul>
+    </div>
 
 
 
