--- a/index.html
+++ b/index.html
@@ -73,9 +73,9 @@
             </div>
         </div>
     </header>
-    <div class="container">
+    <div class="containerr">
         <ul>
-            <li>
+            <li class="max_width">
                 <a href="">Меню</a>
             </li>
             <li>
