--- a/index.html
+++ b/index.html
@@ -74,23 +74,25 @@
         </div>
     </header>
     <div class="containerr">
-        <ul>
-            <li class="max_width">
-                <a href="">Меню</a>
-            </li>
-            <li>
-                <a href="">Бонусная программа</a>
-            </li>
-            <li>
-                <a href="">Тарифы и услуги</a>
-            </li>
-            <li>
-                <a href="">Советы по почтовому оформлению</a>
-            </li>
-            <li>
-                <a href="">Шоппинг-сервис</a>
-            </li>
-        </ul>
+        <div>
+            <ul class="max_width">
+                <li>
+                    <a href="">Меню</a>
+                </li>
+                <li>
+                    <a href="">Бонусная программа</a>
+                </li>
+                <li>
+                    <a href="">Тарифы и услуги</a>
+                </li>
+                <li>
+                    <a href="">Советы по почтовому оформлению</a>
+                </li>
+                <li>
+                    <a href="">Шоппинг-сервис</a>
+                </li>
+            </ul>
+        </div>
     </div>
 
 
