--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     </div>
             </div>
             </a>
-            <div class="telephone">
+            <div class="telephone phone1">
                 <div>
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="darkgrey" class="bi bi-telephone-fill" viewBox="0 0 16 16">
                     <path fill-rule="evenodd" d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z"/>
@@ -33,7 +33,7 @@
                     <a href="">(+998 94) 643-00-90</a>
                 </div>
             </div>
-            <div class="telephone">
+            <div class="telephone phone2">
                 <div >
                     <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="darkgrey" class="bi bi-send-fill" viewBox="0 0 16 16">
                         <path d="M15.964.686a.5.5 0 0 0-.65-.65L.767 5.855H.766l-.452.18a.5.5 0 0 0-.082.887l.41.26.001.002 4.995 3.178 3.178 4.995.002.002.26.41a.5.5 0 0 0 .886-.083l6-15Zm-1.833 1.89L6.637 10.07l-.215-.338a.5.5 0 0 0-.154-.154l-.338-.215 7.494-7.494 1.178-.471-.47 1.178Z"/>
@@ -94,8 +94,150 @@
             </ul>
         </div>
     </div>
-
-
+    <div class="site-BP">
+        <h1>
+            Бонусная программа
+            <img src="img/star.png" alt="">
+            <img src="img/star (1).png" alt="">
+            <img src="img/star (2).png" alt="">
+        </h1>
+        <div class="main">
+            <h3>
+                Одна из многих причин почему вам стоит выбрать Green Post - это наша политика поощрения активных пользователей сервиса по доставке товаров из Китая.
+            </h3>
+            <h2>
+                БОЛЬШЕ ПОСЫЛОК - БОЛЬШЕ ЭКОНОМИЯ!
+            </h2>
+            <div class="rows">
+                <div class="cols">
+                    <div class="standart">
+                        <h3>STANDART</h3>
+                        <h4>0 кг/месяц</h4>
+                        <p class="p1">Авиадоставка <br> Китай-Узбекистан</p>
+                        <p class="p2"><span>$10</span>/кг</p>
+                    </div>
+                    <div class="shopper">
+                        <h3>SHOPPER</h3>
+                        <h4>25 кг/месяц</h4>
+                        <p class="p1">Авиадоставка <br> Китай-Узбекистан</p>
+                        <p class="p2"><span>$9.8</span>/кг</p>
+                    </div>
+                </div>
+                <div class="cols">
+                    <div class="gold">
+                        <h3>GOLD</h3>
+                        <h4>75 кг/месяц</h4>
+                        <p class="p1">Авиадоставка <br> Китай-Узбекистан</p>
+                        <p class="p2"><span>$9.5</span>/кг</p>
+                    </div>
+                    <div class="platinum">
+                        <h3>PLATINUM</h3>
+                        <h4>150 кг/месяц</h4>
+                        <p class="p1">Авиадоставка <br> Китай-Узбекистан</p>
+                        <p class="p2"><span>$9</span>/кг</p>
+                    </div>
+                </div>
+            </div>
+            <div class="example">
+                <h2>Отправляй больше посылок и становись участником бонусной системы!</h2>
+                <p class="p1">Подсчет отправленных кг за месяц производится последнего числа отчетного месяца - таким образом определяется тарифный план на следующий месяц. О назначении тарифа клиент оповещается путем email-уведомления.</p>
+                <p class="p2"><b>Пример:</b> За период 1-30 сентября вес отправленных вами посылок - 102 кг. Соответственно, на период 1-31 октября вам назначается тарифный план GOLD и вы оплачиваете стоимость доставки исходя из этого тарифного плана.</p>
+            </div>
+        </div>
+        <footer class="footer">
+            <div class="header max_width">
+                <div class="nav_head">
+                    <a href="">
+                    <div  class="d-flex">
+                            <img src="https://www.greenpost.uz/images/logo.svg" alt="">
+                            <div>
+                                <span class="brand">GREEN POST</span>
+                                <span class="slogin">выгодная доставка из Китая</span>
+                            </div>
+                    </div>
+                    </a>
+                    <div class="telephone phone1">
+                        <div>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="white" class="bi bi-telephone-fill" viewBox="0 0 16 16">
+                            <path fill-rule="evenodd" d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z"/>
+                            </svg>
+                            <a href="">(+998 94) 603-00-90</a>
+                        </div>
+                        <div>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="white" class="bi bi-telephone-fill" viewBox="0 0 16 16">
+                            <path fill-rule="evenodd" d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z"/>
+                            </svg>
+                            <a href="">(+998 94) 643-00-90</a>
+                        </div>
+                    </div>
+                    <div class="telephone phone2">
+                        <div >
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="white" class="bi bi-send-fill" viewBox="0 0 16 16">
+                                <path d="M15.964.686a.5.5 0 0 0-.65-.65L.767 5.855H.766l-.452.18a.5.5 0 0 0-.082.887l.41.26.001.002 4.995 3.178 3.178 4.995.002.002.26.41a.5.5 0 0 0 .886-.083l6-15Zm-1.833 1.89L6.637 10.07l-.215-.338a.5.5 0 0 0-.154-.154l-.338-.215 7.494-7.494 1.178-.471-.47 1.178Z"/>
+                              </svg>
+                            <a href="">@greenpostuz</a>
+                        </div>
+                        <div>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="white" class="bi bi-telephone-fill" viewBox="0 0 16 16">
+                            <path fill-rule="evenodd" d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z"/>
+                            </svg>
+                            <a href="">(+998 94) 643-00-90</a>
+                        </div>
+                    </div>
+                    <div class="instruksiya">
+                        <a href="" class="lichniy">Личный кабинет</a><br>
+                        <a href="" class="instruktor">Инструкция</a>
+                    </div>
+                    <div class="language">
+                        <p id="yazik">Выберите язык</p>
+                        <ul class="flags">
+                            <li>
+                                <a href="">
+                                    <img src="https://www.greenpost.uz/images/uz.svg" alt="">
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    <img src="https://www.greenpost.uz/images/ru.svg" alt="">
+                                </a>
+                            </li>
+                            <li>
+                                <a href="">
+                                    <img src="https://www.greenpost.uz/images/cn.svg" alt="">
+                                </a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+            <div class="containerr background">
+                <div>
+                    <ul class="max_width">
+                        <li>
+                            <a href="">Меню</a>
+                        </li>
+                        <li>
+                            <a href="">Бонусная программа</a>
+                        </li>
+                        <li>
+                            <a href="">Тарифы и услуги</a>
+                        </li>
+                        <li>
+                            <a href="">Советы по почтовому оформлению</a>
+                        </li>
+                        <li>
+                            <a href="">Шоппинг-сервис</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </footer>
+    </div>
+    <div class="chat">
+        <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="white" class="bi bi-chat-left-text-fill" viewBox="0 0 16 16">
+            <path d="M0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H4.414a1 1 0 0 0-.707.293L.854 15.146A.5.5 0 0 1 0 14.793zm3.5 1a.5.5 0 0 0 0 1h9a.5.5 0 0 0 0-1zm0 2.5a.5.5 0 0 0 0 1h9a.5.5 0 0 0 0-1zm0 2.5a.5.5 0 0 0 0 1h5a.5.5 0 0 0 0-1z"/>
+          </svg>
+    </div>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
