--- a/index.html
+++ b/index.html
@@ -77,7 +77,37 @@
         <div>
             <ul class="max_width">
                 <li>
-                    <a href="">Меню</a>
+                    <button type="button" class="btn btn-primary btn_menu" data-bs-toggle="modal" data-bs-target="#exampleModal">Меню</button>
+                <!-- Modal -->
+                <div class="modal fade modal_absolute" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-body">
+          <ul>
+            <li class="li1">
+                <a href="">Как оформить доставку</a>
+            </li>
+            <li class="li2">
+                <a href="">Правила перевозки товаров</a>
+            </li>
+            <li class="li3">
+                <a href="">Советы по почтовому оформлению</a>
+            </li>
+            <li class="li4">
+                <a href="">Про шопинг в Китае</a>
+            </li>
+            <li class="li5">
+                <a href="">Подробнее о таобао</a>
+            </li>
+            <li class="li6">
+                <a href="">Сервис выкупа товаров на TaoBao, Tmall, 1688</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+                </div>
+
                 </li>
                 <li>
                     <a href="">Бонусная программа</a>
@@ -145,6 +175,36 @@
             </div>
         </div>
         <footer class="footer">
+
+            <div class="modal fade modal_absolute2" id="exampleModalbottom" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered">
+                  <div class="modal-content">
+                    <div class="modal-body">
+                      <ul>
+                        <li class="li1">
+                            <a href="">Как оформить доставку</a>
+                        </li>
+                        <li class="li2">
+                            <a href="">Правила перевозки товаров</a>
+                        </li>
+                        <li class="li3">
+                            <a href="">Советы по почтовому оформлению</a>
+                        </li>
+                        <li class="li4">
+                            <a href="">Про шопинг в Китае</a>
+                        </li>
+                        <li class="li5">
+                            <a href="">Подробнее о таобао</a>
+                        </li>
+                        <li class="li6">
+                            <a href="">Сервис выкупа товаров на TaoBao, Tmall, 1688</a>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+            </div>
+
             <div class="header max_width">
                 <div class="nav_head">
                     <a href="">
@@ -214,7 +274,36 @@
                 <div>
                     <ul class="max_width">
                         <li>
-                            <a href="">Меню</a>
+                            <button type="button" class="btn btn-primary btn_menu1" data-bs-toggle="modal" data-bs-target="#exampleModalbottom">Меню</button>
+                            <!-- Modal -->
+                            <div class="modal fade modal_absolute2" id="exampleModalbottom" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                <div class="modal-dialog">
+                  <div class="modal-content">
+                    <div class="modal-body">
+                      <ul>
+                        <li class="li1">
+                            <a href="">Как оформить доставку</a>
+                        </li>
+                        <li class="li2">
+                            <a href="">Правила перевозки товаров</a>
+                        </li>
+                        <li class="li3">
+                            <a href="">Советы по почтовому оформлению</a>
+                        </li>
+                        <li class="li4">
+                            <a href="">Про шопинг в Китае</a>
+                        </li>
+                        <li class="li5">
+                            <a href="">Подробнее о таобао</a>
+                        </li>
+                        <li class="li6">
+                            <a href="">Сервис выкупа товаров на TaoBao, Tmall, 1688</a>
+                        </li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+                            </div>
                         </li>
                         <li>
                             <a href="">Бонусная программа</a>
