--- a/index.html
+++ b/index.html
@@ -3,10 +3,127 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <title>Greenpost.uz</title>
+    <link rel="stylesheet" href="greenpost.css">
+    <title>Document</title>
 </head>
 <body>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+
+    <header class="header max_width">
+        <div class="nav_head">
+            <a href="">
+            <div  class="d-flex">
+                    <img src="https://www.greenpost.uz/images/logo.svg" alt="">
+                    <div>
+                        <span class="brand">GREEN POST</span>
+                        <span class="slogin">выгодная доставка из Китая</span>
+                    </div>
+            </div>
+            </a>
+            <div class="telephone phone1">
+                <div>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="darkgrey" class="bi bi-telephone-fill" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd" d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z"/>
+                    </svg>
+                    <a href="">(+998 94) 603-00-90</a>
+                </div>
+                <div>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="darkgrey" class="bi bi-telephone-fill" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd" d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z"/>
+                    </svg>
+                    <a href="">(+998 94) 643-00-90</a>
+                </div>
+            </div>
+            <div class="telephone phone2">
+                <div >
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="darkgrey" class="bi bi-send-fill" viewBox="0 0 16 16">
+                        <path d="M15.964.686a.5.5 0 0 0-.65-.65L.767 5.855H.766l-.452.18a.5.5 0 0 0-.082.887l.41.26.001.002 4.995 3.178 3.178 4.995.002.002.26.41a.5.5 0 0 0 .886-.083l6-15Zm-1.833 1.89L6.637 10.07l-.215-.338a.5.5 0 0 0-.154-.154l-.338-.215 7.494-7.494 1.178-.471-.47 1.178Z"/>
+                      </svg>
+                    <a href="">@greenpostuz</a>
+                </div>
+                <div>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="darkgrey" class="bi bi-telephone-fill" viewBox="0 0 16 16">
+                    <path fill-rule="evenodd" d="M1.885.511a1.745 1.745 0 0 1 2.61.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.678.678 0 0 0 .178.643l2.457 2.457a.678.678 0 0 0 .644.178l2.189-.547a1.745 1.745 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.634 18.634 0 0 1-7.01-4.42 18.634 18.634 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877L1.885.511z"/>
+                    </svg>
+                    <a href="">(+998 94) 643-00-90</a>
+                </div>
+            </div>
+            <div class="instruksiya">
+                <a href="" class="lichniy">Личный кабинет</a><br>
+                <a href="" class="instruktor">Инструкция</a>
+            </div>
+            <div class="language">
+                <p>Выберите язык</p>
+                <ul class="flags">
+                    <li>
+                        <a href="">
+                            <img src="https://www.greenpost.uz/images/uz.svg" alt="">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <img src="https://www.greenpost.uz/images/ru.svg" alt="">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <img src="https://www.greenpost.uz/images/cn.svg" alt="">
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </header>
+    <div class="containerr">
+        <div>
+            <ul class="max_width">
+                <li>
+                    <button type="button" class="btn btn-primary btn_menu" data-bs-toggle="modal" data-bs-target="#exampleModal">Меню</button>
+                <!-- Modal -->
+                <div class="modal fade modal_absolute" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-body">
+          <ul>
+            <li class="li1">
+                <a href="">Как оформить доставку</a>
+            </li>
+            <li class="li2">
+                <a href="">Правила перевозки товаров</a>
+            </li>
+            <li class="li3">
+                <a href="">Советы по почтовому оформлению</a>
+            </li>
+            <li class="li4">
+                <a href="">Про шопинг в Китае</a>
+            </li>
+            <li class="li5">
+                <a href="">Подробнее о таобао</a>
+            </li>
+            <li class="li6">
+                <a href="">Сервис выкупа товаров на TaoBao, Tmall, 1688</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+                </div>
+
+                </li>
+                <li>
+                    <a href="">Бонусная программа</a>
+                </li>
+                <li>
+                    <a href="">Тарифы и услуги</a>
+                </li>
+                <li>
+                    <a href="">Советы по почтовому оформлению</a>
+                </li>
+                <li>
+                    <a href="">Шоппинг-сервис</a>
+                </li>
+            </ul>
+        </div>
+    </div>
+
 </body>
 </html>
