--- a/index.html
+++ b/index.html
@@ -126,7 +126,13 @@
             </ul>
         </div>
     </div>
-    
+
+    <main class="main">
+        <div class="banner">
+            <img src="img/banner-290823.jpg" alt="">
+        </div>
+    </main>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
