--- a/bonus.html
+++ b/bonus.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/bonus.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <title>Greenpost.uz</title>
 </head>
 <body>
     <header class="header max_width">
         <div class="nav_head">
-            <a href="">
+            <a href="index.html">
             <div  class="d-flex">
                     <img src="https://www.greenpost.uz/images/logo.svg" alt="">
                     <div>
@@ -73,44 +73,24 @@
             </div>
         </div>
     </header>
+
     <div class="containerr">
         <div>
             <ul class="max_width">
-                <li>
-                    <button type="button" class="btn btn-primary btn_menu" data-bs-toggle="modal" data-bs-target="#exampleModal">Меню</button>
-                <!-- Modal -->
-                <div class="modal fade modal_absolute" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-      <div class="modal-content">
-        <div class="modal-body">
-          <ul>
-            <li class="li1">
-                <a href="">Как оформить доставку</a>
-            </li>
-            <li class="li2">
-                <a href="">Правила перевозки товаров</a>
-            </li>
-            <li class="li3">
-                <a href="">Советы по почтовому оформлению</a>
-            </li>
-            <li class="li4">
-                <a href="">Про шопинг в Китае</a>
-            </li>
-            <li class="li5">
-                <a href="">Подробнее о таобао</a>
-            </li>
-            <li class="li6">
-                <a href="">Сервис выкупа товаров на TaoBao, Tmall, 1688</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </div>
-                </div>
-
+                <li class="menyular" id="menyular">
+                    <a class="head-menu" href="#">Меню</a>
+                    <div class="menu-block" id="menu-block">
+                        <a href="#">Как оформить доставку</a>
+                        <a href="#">Правила перевозки товаров</a>
+                        <a href="#">Советы по почтовому оформлению</a>
+                        <a href="#">Про шопинг в Китае</a>
+                        <a href="#">Подробнее о таобао</a>
+                        <a href="#">Сервис выкупа товаров на TaoBao, Tmall, 1688</a>
+                    </div>
+                </li>
                 </li>
                 <li>
-                    <a href="">Бонусная программа</a>
+                    <a href="bonus.html">Бонусная программа</a>
                 </li>
                 <li>
                     <a href="">Тарифы и услуги</a>
@@ -124,6 +104,7 @@
             </ul>
         </div>
     </div>
+
     <div class="site-BP">
         <h1>
             Бонусная программа
@@ -175,36 +156,6 @@
             </div>
         </div>
         <footer class="footer">
-
-            <div class="modal fade modal_absolute2" id="exampleModalbottom" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                <div class="modal-dialog modal-dialog-centered">
-                  <div class="modal-content">
-                    <div class="modal-body">
-                      <ul>
-                        <li class="li1">
-                            <a href="">Как оформить доставку</a>
-                        </li>
-                        <li class="li2">
-                            <a href="">Правила перевозки товаров</a>
-                        </li>
-                        <li class="li3">
-                            <a href="">Советы по почтовому оформлению</a>
-                        </li>
-                        <li class="li4">
-                            <a href="">Про шопинг в Китае</a>
-                        </li>
-                        <li class="li5">
-                            <a href="">Подробнее о таобао</a>
-                        </li>
-                        <li class="li6">
-                            <a href="">Сервис выкупа товаров на TaoBao, Tmall, 1688</a>
-                        </li>
-                      </ul>
-                    </div>
-                  </div>
-                </div>
-            </div>
-
             <div class="header max_width">
                 <div class="nav_head">
                     <a href="">
@@ -269,58 +220,38 @@
                         </ul>
                     </div>
                 </div>
-            </div>
-            <div class="containerr background">
-                <div>
-                    <ul class="max_width">
-                        <li>
-                            <button type="button" class="btn btn-primary btn_menu1" data-bs-toggle="modal" data-bs-target="#exampleModalbottom">Меню</button>
-                            <!-- Modal -->
-                            <div class="modal fade modal_absolute2" id="exampleModalbottom" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-                <div class="modal-dialog">
-                  <div class="modal-content">
-                    <div class="modal-body">
-                      <ul>
-                        <li class="li1">
-                            <a href="">Как оформить доставку</a>
-                        </li>
-                        <li class="li2">
-                            <a href="">Правила перевозки товаров</a>
-                        </li>
-                        <li class="li3">
-                            <a href="">Советы по почтовому оформлению</a>
-                        </li>
-                        <li class="li4">
-                            <a href="">Про шопинг в Китае</a>
-                        </li>
-                        <li class="li5">
-                            <a href="">Подробнее о таобао</a>
-                        </li>
-                        <li class="li6">
-                            <a href="">Сервис выкупа товаров на TaoBao, Tmall, 1688</a>
-                        </li>
-                      </ul>
-                    </div>
-                  </div>
-                </div>
-                            </div>
-                        </li>
-                        <li>
-                            <a href="">Бонусная программа</a>
-                        </li>
-                        <li>
-                            <a href="">Тарифы и услуги</a>
-                        </li>
-                        <li>
-                            <a href="">Советы по почтовому оформлению</a>
-                        </li>
-                        <li>
-                            <a href="">Шоппинг-сервис</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
+            </div>            
         </footer>
+        <div class="containerr">
+            <div>
+                <ul class="max_width">
+                    <li class="menyular" id="menyular">
+                        <a class="head-menu" href="">Меню</a>
+                        <div class="menu-block" id="menu-block">
+                            <a href="#">Как оформить доставку</a>
+                            <a href="#">Правила перевозки товаров</a>
+                            <a href="#">Советы по почтовому оформлению</a>
+                            <a href="#">Про шопинг в Китае</a>
+                            <a href="#">Подробнее о таобао</a>
+                            <a href="#">Сервис выкупа товаров на TaoBao, Tmall, 1688</a>
+                        </div>
+                    </li>
+                    </li>
+                    <li>
+                        <a href="bonus.html">Бонусная программа</a>
+                    </li>
+                    <li>
+                        <a href="">Тарифы и услуги</a>
+                    </li>
+                    <li>
+                        <a href="">Советы по почтовому оформлению</a>
+                    </li>
+                    <li>
+                        <a href="">Шоппинг-сервис</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
     </div>
     <div class="chat">
         <svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="white" class="bi bi-chat-left-text-fill" viewBox="0 0 16 16">
@@ -329,5 +260,6 @@
     </div>
     <!-- end -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <script src="main.js"></script>
 </body>
 </html>
