--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                     <a href="">Тарифы и услуги</a>
                 </li>
                 <li>
-                    <a href="">Советы по почтовому оформлению</a>
+                    <a href="soveti.html">Советы по почтовому оформлению</a>
                 </li>
                 <li>
                     <a href="">Шоппинг-сервис</a>
