--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="img/logo.svg">
     <link rel="stylesheet" href="css/greenpost.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <title>Greenpost.uz</title>
@@ -82,11 +83,11 @@
                     <a class="head-menu" href="#">Меню</a>
                     <div class="menu-block" id="menu-block">
                         <a href="#">Как оформить доставку</a>
-                        <a href="#">Правила перевозки товаров</a>
-                        <a href="#">Советы по почтовому оформлению</a>
+                        <a href="menyu pages/pravila.html">Правила перевозки товаров</a>
+                        <a href="soveti.html">Советы по почтовому оформлению</a>
                         <a href="#">Про шопинг в Китае</a>
-                        <a href="#">Подробнее о таобао</a>
-                        <a href="#">Сервис выкупа товаров на TaoBao, Tmall, 1688</a>
+                        <a href="/menyu pages/taobao.html">Подробнее о таобао</a>
+                        <a href="/menyu pages/service.html">Сервис выкупа товаров на TaoBao, Tmall, 1688</a>
                     </div>
                 </li>
                 </li>
@@ -97,7 +98,7 @@
                     <a href="">Тарифы и услуги</a>
                 </li>
                 <li>
-                    <a href="soveti.html">Советы по почтовому оформлению</a>
+                    <a href="soveti.html" >Советы по почтовому оформлению</a>
                 </li>
                 <li>
                     <a href="">Шоппинг-сервис</a>
@@ -582,7 +583,7 @@
         <footer class="footer">
             <div class="header max_width">
                 <div class="nav_head">
-                    <a href="">
+                    <a href="index.html">
                     <div class="d-flex">
                             <img src="https://www.greenpost.uz/images/logo.svg" alt="">
                             <div>
