--- a/soveti.html
+++ b/soveti.html
@@ -51,7 +51,7 @@
             </div>
             <div class="instruksiya">
                 <a href="" class="lichniy">Личный кабинет</a><br>
-                <a href="" class="instruktor">Инструкция</a>
+                <a href="menyu pages/pravila.html" class="instruktor">Инструкция</a>
             </div>
             <div class="language">
                 <p>Выберите язык</p>
@@ -427,6 +427,37 @@
             </div>
         </div>            
     </footer>  
+
+    <div class="containerr f_container">
+        <div>
+            <ul class="max_width">
+                <li class="ftMenyular" id="ftMenyular">
+                    <a class="head-menu" href="#">Меню</a>
+                    <div class="ftMenuBlock" id="ftMenuBlock">
+                        <a href="#">Как оформить доставку</a>
+                        <a href="menyu pages/pravila.html">Правила перевозки товаров</a>
+                        <a href="soveti.html">Советы по почтовому оформлению</a>
+                        <a href="#">Про шопинг в Китае</a>
+                        <a href="/menyu pages/taobao.html">Подробнее о таобао</a>
+                        <a href="/menyu pages/service.html">Сервис выкупа товаров на TaoBao, Tmall, 1688</a>
+                    </div>
+                </li>
+                </li>
+                <li>
+                    <a href="bonus.html">Бонусная программа</a>
+                </li>
+                <li>
+                    <a href="">Тарифы и услуги</a>
+                </li>
+                <li>
+                    <a href="soveti.html" >Советы по почтовому оформлению</a>
+                </li>
+                <li>
+                    <a href="">Шоппинг-сервис</a>
+                </li>
+            </ul>
+        </div>
+    </div>
 
     <div class="chat">
         <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="white" class="bi bi-chat-left-text-fill" viewBox="0 0 16 16">
