--- a/bonus.html
+++ b/bonus.html
@@ -50,7 +50,7 @@
             </div>
             <div class="instruksiya">
                 <a href="" class="lichniy">Личный кабинет</a><br>
-                <a href="" class="instruktor">Инструкция</a>
+                <a href="menyu pages/pravila.html" class="instruktor">Инструкция</a>
             </div>
             <div class="language">
                 <p>Выберите язык</p>
@@ -156,7 +156,9 @@
                 <p class="p2"><b>Пример:</b> За период 1-30 сентября вес отправленных вами посылок - 102 кг. Соответственно, на период 1-31 октября вам назначается тарифный план GOLD и вы оплачиваете стоимость доставки исходя из этого тарифного плана.</p>
             </div>
         </div>
-        <footer class="footer">
+    </div>
+
+    <footer class="footer">
             <div class="header max_width">
                 <div class="nav_head">
                     <a href="index.html">
@@ -222,10 +224,39 @@
                     </div>
                 </div>
             </div>            
-        </footer>
-        
-
+    </footer> 
+    
+    <div class="containerr f_container">
+        <div>
+            <ul class="max_width">
+                <li class="ftMenyular" id="ftMenyular">
+                    <a class="head-menu" href="#">Меню</a>
+                    <div class="ftMenuBlock" id="ftMenuBlock">
+                        <a href="#">Как оформить доставку</a>
+                        <a href="menyu pages/pravila.html">Правила перевозки товаров</a>
+                        <a href="soveti.html">Советы по почтовому оформлению</a>
+                        <a href="#">Про шопинг в Китае</a>
+                        <a href="/menyu pages/taobao.html">Подробнее о таобао</a>
+                        <a href="/menyu pages/service.html">Сервис выкупа товаров на TaoBao, Tmall, 1688</a>
+                    </div>
+                </li>
+                </li>
+                <li>
+                    <a href="bonus.html">Бонусная программа</a>
+                </li>
+                <li>
+                    <a href="">Тарифы и услуги</a>
+                </li>
+                <li>
+                    <a href="soveti.html" >Советы по почтовому оформлению</a>
+                </li>
+                <li>
+                    <a href="">Шоппинг-сервис</a>
+                </li>
+            </ul>
+        </div>
     </div>
+
     <div class="chat">
         <svg xmlns="http://www.w3.org/2000/svg" width="30" height="30" fill="white" class="bi bi-chat-left-text-fill" viewBox="0 0 16 16">
             <path d="M0 2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H4.414a1 1 0 0 0-.707.293L.854 15.146A.5.5 0 0 1 0 14.793zm3.5 1a.5.5 0 0 0 0 1h9a.5.5 0 0 0 0-1zm0 2.5a.5.5 0 0 0 0 1h9a.5.5 0 0 0 0-1zm0 2.5a.5.5 0 0 0 0 1h5a.5.5 0 0 0 0-1z"/>
