--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
         </div>
 
         <div class="container-fluid">
-            <div class="container">
+            <div class="container ">
                 <div class="roww">
                     <div class="div1">
                         <h3 class="mb-4">Отследить посылку из Китая в Узбекистан</h3>
@@ -175,18 +175,19 @@
 
                 </div>
                 <div class="cols">
-                    <div class="number">4</div>
+                    <div class="number">3</div>
                     <div class="icon">
                         <img src="img/buy.svg" alt="">
                     </div>
                     <h3>Оформляем</h3>
                     <p>
+                        Добавьте вашу покупку в
                         <a href="">личный кабинет GreenPost</a>
                         указав всю необходимую информацию, чтобы подтвердить ее отправку и оплатить доставку до Узбекистана.
                     </p>
                 </div>
                 <div class="cols">
-                    <div class="number">2</div>
+                    <div class="number">4</div>
                     <div class="icon">
                         <img src="img/buy.svg" alt="">
                     </div>
@@ -314,7 +315,7 @@
                 <h2 class="text-center">Наши преимущества</h2>
                 <div class="advantage-d">
                     <div class="advantage">
-                        <div class="icon">
+                        <div class="icon icon1">
                             <img src="img/control.svg" alt="">
                         </div>
                         <div class="text">
@@ -325,7 +326,7 @@
                         </div>
                     </div><br>
                     <div class="advantage">
-                        <div class="icon">
+                        <div class="icon icon2">
                             <img src="img/consolidation.svg" alt="">
                         </div>
                         <div class="text">
@@ -338,7 +339,7 @@
                 </div>
                 <div class="advantage-d">
                     <div class="advantage">
-                        <div class="icon">
+                        <div class="icon icon3">
                             <img src="img/customs.svg" alt="">
                         </div>
                         <div class="text">
@@ -349,7 +350,7 @@
                         </div>
                     </div><br>
                     <div class="advantage">
-                        <div class="icon">
+                        <div class="icon icon4">
                             <img src="img/map.svg" alt="">
                         </div>
                         <div class="text">
@@ -393,7 +394,7 @@
                             <div class="pl-4">
                                 <label for="one-click" class="d-flex position-relative ml-n4 pl-4">
                                     <input type="radio" name="warehouse_services" value="one-click" id="one-click" class="custom-radio" checked="" data-input="service">
-                                    <span class="h6 m-0 text-main">Отправка в один клик</span>
+                                    <span class="h6 m-0 text-main" style="color: black;">Отправка в один клик</span>
                                 </label>
                                 <p class="calculate-text">
                                     Без проверки. Без хранения. Немедленная отправка в том виде, в котором посылка поступила на склад.
@@ -403,7 +404,7 @@
                             <div class="pl-4">
                                 <label for="without-check" class="d-flex position-relative ml-n4 pl-4">
                                     <input type="radio" name="warehouse_services" value="without-check" id="without-check" class="custom-radio" data-input="service">
-                                    <span class="h6 m-0 text-main">Объединение/Разделение</span>
+                                    <span class="h6 m-0 text-main" style="color: black;">Объединение/Разделение</span>
                                 </label>
                                 <p class="calculate-text">
                                     Хранение на складе. Объединение с другими товарами, или разделение одной посылки на несколько.
@@ -413,7 +414,7 @@
                             <div class="pl-4">
                                 <label for="check" class="d-flex position-relative ml-n4 pl-4">
                                     <input type="radio" name="warehouse_services" value="check" id="check" class="custom-radio" data-input="service">
-                                    <span class="h6 m-0 text-main">Объединение/Разделение + проверка</span>
+                                    <span class="h6 m-0 text-main"  style="color: black;">Объединение/Разделение + проверка</span>
                                 </label>
                                 <p class="calculate-text">
                                     Хранение на складе. Объединение с другими товарами, или разделение одной посылки на несколько.<br>
@@ -583,7 +584,7 @@
     </main>
 
         <footer class="footer">
-            <div class="header max_width">
+            <div class="header max_width ">
                 <div class="nav_head">
                     <a href="index.html">
                     <div class="d-flex">
