--- a/admin panel/tovari.html
+++ b/admin panel/tovari.html
@@ -61,7 +61,8 @@
         <div class="part">
             <div class="header">
                     <div class="qism1">
-                        <div class="btn-hid" onclick="hideMenu()"><svg viewBox="0 0 16 16" width="1em" height="1em" focusable="false" role="img" aria-label="list" xmlns="http://www.w3.org/2000/svg" fill="white" class="bi-list b-icon bi" style="font-size: 250%;"><g><path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"></path></g></svg></div>
+                        <div class="btn-hid btn-hid1" onclick="hideMenu1()"><svg viewBox="0 0 16 16" width="1em" height="1em" focusable="false" role="img" aria-label="list" xmlns="http://www.w3.org/2000/svg" fill="white" class="bi-list b-icon bi" style="font-size: 250%;"><g><path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"></path></g></svg></div>
+                        <div class="btn-hid btn-hid2" onclick="hideMenu2()"><svg viewBox="0 0 16 16" width="1em" height="1em" focusable="false" role="img" aria-label="list" xmlns="http://www.w3.org/2000/svg" fill="white" class="bi-list b-icon bi" style="font-size: 250%;"><g><path fill-rule="evenodd" d="M2.5 12a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5zm0-4a.5.5 0 0 1 .5-.5h10a.5.5 0 0 1 0 1H3a.5.5 0 0 1-.5-.5z"></path></g></svg></div>
                         <div  class="d-flex">
                             <img src="https://app.greenpost.uz/gp_cabinet/img/logo-white.b16def97.svg" alt="">
                             <div style="display: grid;">
@@ -202,6 +203,7 @@
                     </div>
                 </div>
             </main>
+            <div class="b-sidebar-backdrop bg-dark" id="b-sidebar-backdrop" onclick="sidebar_backdrop()"></div>
         </div>
     </div>
 
