--- a/login.html
+++ b/login.html
@@ -29,7 +29,7 @@
                     <input id="login-email" type="email">
                     <label for="login-password">Пароль:</label>
                     <input id="login-password" type="password">
-                    <button type="button" class="btn-login" onclick="voyti()"><a href="admin panel/glavnaya.html" style="color: #fff;">Войти</a> </button>
+                    <button type="submit" class="btn-login"><a href="kabinet/glavnaya.html" style="color: white;">Войти </a></button>
                 </form>
                 <form action="" class="form-signup" id="form-signup">
                     <label for="familiya">Фамилия:</label>
